Centered footer text

--- a/Index.html
+++ b/Index.html
@@ -43,7 +43,8 @@
 
 	</div>
 	<div id="footer">
-		<h2>Crinkle Cut Games 2023</h2>
+		<h2>Crinkle Cut Games 2023<br>Partially funded the Danish Film Institute</h2>
+
 	</div>
 </body>
 </html>
