--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCKTYPE html>
 <html lang="en">
 <head>
-	<title></title>
+	<title>Crinkle Cut Games</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="stylesheet.css">
+	<link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
     <!--link rel="shortcut icon" href="/assets/css/favicons/favicon.ico"//-->
     <!--link rel="stylesheet" href="/assets/css/main.css"/-->
 </head>
