Tried _tab for target in order to open link correctly in ios

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!--img src="assets/images/HeroImg.png"-->
 		
 			<!--<button id="wishlistnow" data-default="Wishlist on Steam!" data-hover="&#128279 To Steam!" data-active="&#10084 Thanks" onclick="window.open('https://store.steampowered.com/app/2274620/Discounty/','_blank')"></button1>-->
-			<a id="wishlistnow" data-default="Wishlist on Steam!" data-hover="&#128279 To Steam!" data-active="&#10084 Thanks" href='https://store.steampowered.com/app/2274620/Discounty/' target="_blank"></a>
+			<a id="wishlistnow" data-default="Wishlist on Steam!" data-hover="&#128279 To Steam!" data-active="&#10084 Thanks" href='https://store.steampowered.com/app/2274620/Discounty/' target="_tab"></a>
 		
 	</div>
 	<div id="bothorizontal">
