Updated stylesheet to make /business responsive

--- a/business.html
+++ b/business.html
@@ -6,28 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="stylesheet.css">
 	<link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
+
     <!--link rel="shortcut icon" href="/assets/css/favicons/favicon.ico"//-->
     <!--link rel="stylesheet" href="/assets/css/main.css"/-->
 </head>
 <body>
 	<!-- Hero image -->
 	
-	
-	<div id="bothorizontal">
-			<div id="botlogo"> 
-				<img id="logo" src="assets/images/DiscountyLogo.svg">
-				<div id=cutlogo>
-					&nbsp;
-				</div>
-			</div>
-	</div>
+
 	
 
 	<!-- Contact info -->
-	<div id="bottom">
-		<div class="horizontalcontent" >
-			<img src="assets/images/DiscountyLogo.svg" style="height:160px" class="center">
-			
+	<div class="horizontalcontent">
+		<div class="center" >
+			<a href="https://crinklecutgames.com/">
+				<img src="assets/images/DiscountyLogo.svg" class="center">
+			</a>
 			
 			<p>Email: <a onclick="copyToClipboard()">crinklecutgames@gmail.com</a></p>
 			<script>
@@ -43,15 +37,15 @@
 			
 			<p>Twitter: <a href="https://twitter.com/DiscountyGame" target="_blank" rel="noopener noreferrer">@DiscountyGame</a></p>
 
-			<p>Trailer:</p>
-			<iframe allow="fullscreen" width="640" height="360"
+			<iframe allow="fullscreen" width="100%" height="56.25%"
 				src="https://www.youtube.com/embed/5sifUwGiU34">
 			</iframe>
 		</div>
-
-	</div>
-	<div id="footer">
+		<div id="footer">
 		<h2>Crinkle Cut Games 2023</h2>
 	</div>
+	</div>
+
+	
 </body>
 </html>
