Added the TikTok link to index and /business

--- a/business.html
+++ b/business.html
@@ -37,6 +37,8 @@
 			
 			<p>Twitter: <a href="https://twitter.com/DiscountyGame" target="_blank" rel="noopener noreferrer">@DiscountyGame</a></p>
 
+			<p>TikTok: <a href="https://www.tiktok.com/@discountygame" target="_blank" rel="noopener noreferrer">@discountygame</a></p>
+
 			<iframe allow="fullscreen" width="100%" height="56.25%"
 				src="https://www.youtube.com/embed/5sifUwGiU34">
 			</iframe>
