--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 		<div class="horizontalcontent" >
 			<h1>Get in contact! &#128172</h1>
 			<p>Twitter: <a href="https://twitter.com/DiscountyGame" target="_blank" rel="noopener noreferrer">@DiscountyGame</a></p>
+			<p>TikTok: <a href="https://www.tiktok.com/@discountygame" target="_blank" rel="noopener noreferrer">@discountygame</a></p>
 			<p>Email: <a onclick="copyToClipboard()">crinklecutgames@gmail.com</a></p>
 			<script>
 				function copyToClipboard(){
