--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <div class="section">
         <div class="columns">
             <div class="halfcolumn">
-                <img src="assets/CrinkleCutGamesLogoColorWhiteOutline.png" style="width: 75%; margin: auto; display: block;">
+                <img src="assets/CrinkleCutGamesLogoColorWhiteOutline.png" id="CcgLogo">
             </div>
             <div class="halfcolumn">
                 <h2>About us </h2>
@@ -83,7 +83,7 @@
     <div  style="background-color: #9babb2">
         <div class="section" >
             <h2>Meet the team!</h2>
-            <div class="thirdcolumn-container">
+            <div class="five-column-container">
                 <div class="employee-description">
                     <img src="assets/AnnePicture.jpg" class="employee-picture">
                     <h3>Anne</h3><a style="border:none;">Writer</a>
