Updated James link

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 </div>
                 <div class="employee-description">
                     <img src="assets/JamesPicture.jpg" class="employee-picture">
-                    <h3>James</h3><a href="https://www.jamesmusic.co.uk/Guitar">Music 🔗</a>
+                    <h3>James</h3><a href="https://www.jamesmusic.co.uk/">Music 🔗</a>
                 </div>
             </div>
         
