Made sure background covers entire viewport

--- a/newsletter.html
+++ b/newsletter.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="stylesheet.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">    
 </Head>
-<body style="background-image: url(assets/DISC-1.png); background-size: cover; background-repeat: no-repeat; background-position: center; height: 100vh; margin: 0;">
+<body style="background-image: url(assets/DISC-1.png); background-repeat: no-repeat; background-position: center; height: 100vh; margin: 0; overflow: auto;">
     <div style="display: grid; height: 100vh; place-items: center; text-align: center; ">
         <div>
             <iframe width="540" height="810" scrolling="no" src="https://eb0791ef.sibforms.com/serve/MUIFAILBeB1c_RbakIdC9EkZzQdSgoye3aDPah_YgJoPQJ6qdjOE82T7AWFvyE5Jt2XBIzA_CsAh4jf4ZD-fSsH1ZBVXfYIn_F1ryeBNJ0lgGmLJJzOLffslugly4I8MUtKXUlEoAnj6DTqMZwICnwzXw0iHIrQIvIFCy7StM499Cw6qpMPYEkMfVnAg4bMnTiL24lBU7HhZVvDC" frameborder="0" scrolling="auto" allowfullscreen style="display: block;margin-left: auto;margin-right: auto;max-width: 100%;"></iframe>
