Actually fixed the background image of the newsletter not filling the viewport correctly

--- a/newsletter.html
+++ b/newsletter.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="stylesheet.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">    
 </Head>
-<body style="background-image: url(assets/DISC-1.png); background-repeat: no-repeat; background-position: center; height: 100vh; margin: 0; overflow: auto;">
-    <div style="display: grid; height: 100vh; place-items: center; text-align: center; ">
+<body style="">
+    <div style="display: grid; height: 100vh; place-items: center; text-align: center; background-image: url(assets/DISC-1.png); background-size: cover; background-repeat: no-repeat; background-position: center; height: 100vh; margin: 0; overflow: auto;">
         <div>
             <iframe width="540" height="810" scrolling="no" src="https://eb0791ef.sibforms.com/serve/MUIFAILBeB1c_RbakIdC9EkZzQdSgoye3aDPah_YgJoPQJ6qdjOE82T7AWFvyE5Jt2XBIzA_CsAh4jf4ZD-fSsH1ZBVXfYIn_F1ryeBNJ0lgGmLJJzOLffslugly4I8MUtKXUlEoAnj6DTqMZwICnwzXw0iHIrQIvIFCy7StM499Cw6qpMPYEkMfVnAg4bMnTiL24lBU7HhZVvDC" frameborder="0" scrolling="auto" allowfullscreen style="display: block;margin-left: auto;margin-right: auto;max-width: 100%;"></iframe>
             <a aria-label="Visit homepage" href="https://crinklecutgames.com/" style="top: -62px; -ms-transform: translateY(-62px); transform: translateY(-62px);display: inline-block; font-size: 56px; color: #2e222f; background-color: white; padding: 8px; border-radius: 8px; border: 4px solid black;" onmouseover="this.style.backgroundColor='#fbb954'; this.style.textDecoration='underline';" onmouseout="this.style.backgroundColor='white'; this.style.textDecoration='none';">Homepage</a>
