Updated website with key art

--- a/index.html
+++ b/index.html
@@ -1,31 +1,31 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <Head>
+    <link rel="preload" as="image" href="assets/Discounty%20Key%20Art.webp">
     <title>Crinkle Cut Games</title>
+    <meta name="description" content="Learn more about indie game developer Crinkle Cut Games and our debut game Discounty">
     <meta charset="utf-8">
     <link rel="stylesheet" href="stylesheet.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">    
 </Head>
 <body>
 <div class="navigation">    
 </div>
     
-    <div id="hero">
+    <div id="hero" alt="Discounty Key Art" style="background-image: url(assets/Discounty%20Key%20Art.webp); background-size: cover; box-shadow: inset 0 -64px 60px #2e222f; width: 100%; height: calc(56.24vw - 10vw); margin: auto; text-align: center; position: relative;">
         <div class="divider">
             <div id="wishlist-platforms">
-            <a href="https://store.steampowered.com/app/2274620/Discounty/" style="border: none;"><button type="button" class="platform-button"><img class="platform-button-image" src="assets/steam-seeklogo.svg"></button></a>
-            <!---
-            <a href="https://store.steampowered.com/app/2274620/Discounty/" style="border: none;"><button type="button" class="platform-button"><img class="platform-button-image" src="assets/Nintendo_Switch_Logo_(without_text).svg"></button></a>
-            <a href="https://store.steampowered.com/app/2274620/Discounty/" style="border: none;"><button type="button" class="platform-button"><img class="platform-button-image" src="assets/PlayStation_logo.svg"></button></a>
-            <a href="https://store.steampowered.com/app/2274620/Discounty/" style="border: none;"><button type="button" class="platform-button"><img class="platform-button-image" src="assets/Xbox_Logo.svg"></button></a>
-            <a href="https://store.steampowered.com/app/2274620/Discounty/" style="border: none;"><button type="button" class="platform-button"><img class="platform-button-image" src="assets/Epic_Games_logo.svg"></button></a>
-            <a href="https://store.steampowered.com/app/2274620/Discounty/" style="border: none;"><button type="button" class="platform-button"><img class="platform-button-image" src="assets/GOG.com_logo.svg"></button></a>
-            -->
+                <a href="https://store.steampowered.com/app/2274620/Discounty/" style="border: none;"><button type="button" class="platform-button"><img alt="Steam logo" class="platform-button-image" src="assets/steam-seeklogo.svg"></button></a>
+                <!--<a href="https://store.steampowered.com/app/2274620/Discounty/" style="border: none;"><button type="button" class="platform-button"><img alt="Nintendo Switch logo" class="platform-button-image" src="assets/Nintendo_Switch_Logo_(without_text).svg"></button></a> -->
+                <a href="https://store.steampowered.com/app/2274620/Discounty/" style="border: none;"><button type="button" class="platform-button"><img alt="PlayStation logo" class="platform-button-image" src="assets/PlayStation_logo.svg"></button></a>
+                <a href="https://store.steampowered.com/app/2274620/Discounty/" style="border: none;"><button type="button" class="platform-button"><img alt="Xbox logo" class="platform-button-image" src="assets/Xbox_Logo.svg"></button></a>
+                <a href="https://store.steampowered.com/app/2274620/Discounty/" style="border: none;"><button type="button" class="platform-button"><img alt="Epic Games logo" class="platform-button-image" src="assets/Epic_Games_logo.svg"></button></a>
+                <a href="https://store.steampowered.com/app/2274620/Discounty/" style="border: none;"><button type="button" class="platform-button"><img alt="GOG.com logo" class="platform-button-image" src="assets/GOG.com_logo.svg"></button></a>
         </div>
         </div>        
     </div> 
 <div class="section">
-    <a href="https://store.steampowered.com/app/2274620/Discounty/" style="border:none;"><button type="button" class="fullscreen-button" id="wishlistbutton"></button></a>
+    <a aria-label="Wishlist on Steam" href="https://store.steampowered.com/app/2274620/Discounty/" style="border:none;"><button aria-label="Wislist on Steam" type="button" class="fullscreen-button" id="wishlistbutton"></button></a>
 </div>
     <div style="background-image: url(assets/YellowDivider.png); height: 54px;background-repeat: repeat-x; margin-top: 16px;"></div>
 <div id="game-description">
@@ -34,7 +34,8 @@
             <div class="halfcolumn">
                 <h2>Discounty 🛒</h2>
                 <p>Manage your own supermarket! Organize and restock shelves, check customers out, make local trade deals, and befriend a quirky cast of characters. Salvage a failing shop in the once-thriving town and grow it into a thriving business empire. But be warned: not everyone in town wants you to succeed.</p>
-                <a href="https://store.steampowered.com/app/2274620/Discounty/">Read more and add to your wishlist </a>
+                <a href="https://store.steampowered.com/app/2274620/Discounty/">Read more and add to your wishlist </a> <br> <br>
+                <a href="https://store.steampowered.com/app/2274620/Discounty/">Get  press kit</a>
             </div>
             <div class="halfcolumn">
                 <iframe width="100%" id="game-galary" style="border-radius: 16px" src="https://www.youtube.com/embed/5sifUwGiU34?si=2IwCWv1A8p52DlD9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -45,14 +46,8 @@
 </div>
 
 <div style="background-color: #e6904e;">
-    <div id="overlay" onclick="off()">
-        <div id="overlay-element">
-        <iframe width="540" height="810" scrolling="no" src="https://eb0791ef.sibforms.com/serve/MUIFAILBeB1c_RbakIdC9EkZzQdSgoye3aDPah_YgJoPQJ6qdjOE82T7AWFvyE5Jt2XBIzA_CsAh4jf4ZD-fSsH1ZBVXfYIn_F1ryeBNJ0lgGmLJJzOLffslugly4I8MUtKXUlEoAnj6DTqMZwICnwzXw0iHIrQIvIFCy7StM499Cw6qpMPYEkMfVnAg4bMnTiL24lBU7HhZVvDC" frameborder="0" scrolling="auto" allowfullscreen style="display: block;margin-left: auto;margin-right: auto;max-width: 100%;"></iframe>
-        <p style="text-align: center; color: #fbb954;"><i>Click anywhere to go back!</i></p>
-        </div>
-    </div>
     <div class="section">
-        <button onclick="on()" class="fullscreen-button" id="newsletter-button"></button>
+        <a aria-label="Visit newsletter sign-up form" href="https://crinklecutgames.com/newsletter" style="border:none;"><button aria-label="Open newsletter" onclick="on()" class="fullscreen-button" id="newsletter-button"></button></a>
     </div>
     <script>
         function on() {
@@ -69,7 +64,7 @@
     <div class="section">
         <div class="columns">
             <div class="halfcolumn">
-                <img src="assets/CrinkleCutGamesLogoColorWhiteOutline.png" id="CcgLogo">
+                <img alt="Crinkle Cut Games logo" src="assets/CrinkleCutGamesLogoColorWhiteOutline.webp" id="CcgLogo" loading="lazy">
             </div>
             <div class="halfcolumn">
                 <h2>About us </h2>
@@ -86,24 +81,24 @@
             <h2>Meet the team!</h2>
             <div class="five-column-container">
                 <div class="employee-description">
-                    <img src="assets/AnnePicture.jpg" class="employee-picture">
-                    <h3>Anne</h3><a style="border:none;">Writer</a>
+                    <img alt="Anne employee picture" src="assets/AnnePicture.webp" class="employee-picture" loading="lazy">
+                    <h3>Anne</h3><p style="border:none; font-size: 16px; font-family: bloggersans; font-weight: bold; color: #45293f; text-decoration: none; text-align: center;">Writer</p>
                 </div>
                 <div class="employee-description">
-                    <img src="assets/MagnusPic.jpg" class="employee-picture">
-                    <h3>Magnus</h3><a href="https://x.com/Hi_ImAwhale">Artist 🔗</a>
+                    <img alt="Magnus employee picture" src="assets/MagnusPic.webp" class="employee-picture" loading="lazy">
+                    <h3>Magnus</h3><a href="https://x.com/Hi_ImAwhale">Artist</a>
                 </div>
                 <div class="employee-description">
-                    <img src="assets/MathiasPicture.jpg" class="employee-picture">
-                    <h3>Mathias</h3><a href="https://x.com/m_schifter">Programmer 🔗</a>
+                    <img alt="Mathias employee picture" src="assets/MathiasPicture.webp" class="employee-picture" loading="lazy">
+                    <h3>Mathias</h3><a href="https://x.com/m_schifter">Programmer</a>
                 </div>
                 <div class="employee-description">
-                    <img src="assets/IanPicture.jpg" class="employee-picture">
-                    <h3>Ian</h3><a href="https://linktr.ee/eestew">Marketing 🔗</a>
+                    <img alt="Ian employee picture" src="assets/IanPicture.webp" class="employee-picture" loading="lazy">
+                    <h3>Ian</h3><a href="https://linktr.ee/eestew">Marketing</a>
                 </div>
                 <div class="employee-description">
-                    <img src="assets/JamesPicture.jpg" class="employee-picture">
-                    <h3>James</h3><a href="https://www.jamesmusic.co.uk/">Music 🔗</a>
+                    <img alt="James employee picture" src="assets/JamesPicture.webp" class="employee-picture" loading="lazy">
+                    <h3>James</h3><a href="https://www.jamesmusic.co.uk/">Music</a>
                 </div>
             </div>
         
@@ -116,10 +111,11 @@
 <div id="footer">
     <div class="section">
         <h2> Get in contact!</h2>
-            <button type="button" class="contact-button"><a href="https://www.tiktok.com/@discountygame"><img class="contact-button-image" src="assets/tiktok-512.png"></a></button>
-            <button type="button" class="contact-button"><a href="https://www.instagram.com/discountygame/"><img class="contact-button-image" src="assets/Instagram_Glyph_Black.png"></a></button>
-            <button type="button" class="contact-button"><a href="https://x.com/DiscountyGame"><img class="contact-button-image" src="assets/logo-black.png"></a></button>
-            <p style="text-align: center; padding-bottom: 16px;">Or at <a onclick="window.location.href='mailto:your-email@example.com';">crinklecutgames@gmail.com</a></p> 
+            <button type="button" class="contact-button"><a href="https://www.tiktok.com/@discountygame"><img alt="TikTok logo" class="contact-button-image" src="assets/tiktok-512.webp" loading="lazy"></a></button>
+            <button type="button" class="contact-button"><a href="https://www.instagram.com/discountygame/"><img alt="Instagram logo" class="contact-button-image" src="assets/Instagram_Glyph_Black.webp" loading="lazy"></a></button>
+            <button type="button" class="contact-button"><a href="https://x.com/DiscountyGame"><img alt="X.com logo" class="contact-button-image" src="assets/logo-black.webp" loading="lazy"></a></button>
+            <p style="text-align: center; padding-bottom: 16px;">Or at <button style="background-color: transparent; border: 1px #e6904e; border-style: none none solid none; font-size: 16px; font-family: bloggersans; font-weight: bold; color: #45293f; text-decoration: none; text-align: center;" onmouseover="this.style.backgroundColor='#e6904e';" onmouseout="this.style.backgroundColor='transparent';" onclick="window.location.href='mailto:your-email@example.com'; :hover{border}">crinklecutgames@gmail.com</button></p>
+        <a href="https://store.steampowered.com/app/2274620/Discounty/">Press kit</a>
     </div>
 </div> 
 </body>
