Removed links to platforms that are not currently up Added links to platforms that are up Added presskit to the presskit button

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
             <div id="wishlist-platforms">
                 <a href="https://store.steampowered.com/app/2274620/Discounty/" style="border: none;"><button type="button" class="platform-button"><img alt="Steam logo" class="platform-button-image" src="assets/steam-seeklogo.svg"></button></a>
                 <!--<a href="https://store.steampowered.com/app/2274620/Discounty/" style="border: none;"><button type="button" class="platform-button"><img alt="Nintendo Switch logo" class="platform-button-image" src="assets/Nintendo_Switch_Logo_(without_text).svg"></button></a> -->
-                <a href="https://store.steampowered.com/app/2274620/Discounty/" style="border: none;"><button type="button" class="platform-button"><img alt="PlayStation logo" class="platform-button-image" src="assets/PlayStation_logo.svg"></button></a>
-                <a href="https://store.steampowered.com/app/2274620/Discounty/" style="border: none;"><button type="button" class="platform-button"><img alt="Xbox logo" class="platform-button-image" src="assets/Xbox_Logo.svg"></button></a>
-                <a href="https://store.steampowered.com/app/2274620/Discounty/" style="border: none;"><button type="button" class="platform-button"><img alt="Epic Games logo" class="platform-button-image" src="assets/Epic_Games_logo.svg"></button></a>
-                <a href="https://store.steampowered.com/app/2274620/Discounty/" style="border: none;"><button type="button" class="platform-button"><img alt="GOG.com logo" class="platform-button-image" src="assets/GOG.com_logo.svg"></button></a>
+                <a href="https://store.playstation.com/concept/10009623/" style="border: none;"><button type="button" class="platform-button"><img alt="PlayStation logo" class="platform-button-image" src="assets/PlayStation_logo.svg"></button></a>
+                <a href="https://www.xbox.com/en-US/games/store/discounty/9MX2JR436QFW/0010" style="border: none;"><button type="button" class="platform-button"><img alt="Xbox logo" class="platform-button-image" src="assets/Xbox_Logo.svg"></button></a>
+                <!--<a href="https://store.steampowered.com/app/2274620/Discounty/" style="border: none;"><button type="button" class="platform-button"><img alt="Epic Games logo" class="platform-button-image" src="assets/Epic_Games_logo.svg"></button></a>-->
+                <!--<a href="https://store.steampowered.com/app/2274620/Discounty/" style="border: none;"><button type="button" class="platform-button"><img alt="GOG.com logo" class="platform-button-image" src="assets/GOG.com_logo.svg"></button></a>-->
         </div>
         </div>        
     </div> 
@@ -38,7 +38,7 @@
                 <a href="https://store.steampowered.com/app/2274620/Discounty/">Get  press kit</a>
             </div>
             <div class="halfcolumn">
-                <iframe width="100%" id="game-galary" style="border-radius: 16px" src="https://www.youtube.com/embed/5sifUwGiU34?si=2IwCWv1A8p52DlD9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe width="100%" id="game-galary" style="border-radius: 16px" src="https://www.youtube.com/watch?v=TqI0iy6DIBI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
             </div>
     </div>
@@ -115,7 +115,7 @@
             <button type="button" class="contact-button"><a href="https://www.instagram.com/discountygame/"><img alt="Instagram logo" class="contact-button-image" src="assets/Instagram_Glyph_Black.webp" loading="lazy"></a></button>
             <button type="button" class="contact-button"><a href="https://x.com/DiscountyGame"><img alt="X.com logo" class="contact-button-image" src="assets/logo-black.webp" loading="lazy"></a></button>
             <p style="text-align: center; padding-bottom: 16px;">Or at <button style="background-color: transparent; border: 1px #e6904e; border-style: none none solid none; font-size: 16px; font-family: bloggersans; font-weight: bold; color: #45293f; text-decoration: none; text-align: center;" onmouseover="this.style.backgroundColor='#e6904e';" onmouseout="this.style.backgroundColor='transparent';" onclick="window.location.href='mailto:your-email@example.com'; :hover{border}">crinklecutgames@gmail.com</button></p>
-        <a href="https://store.steampowered.com/app/2274620/Discounty/">Press kit</a>
+        <a href="https://drive.google.com/drive/folders/13MVsMPl3XRRqNUmauwhg3YvSd5s3XIhN">Press kit</a>
     </div>
 </div> 
 </body>
