--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <a href="https://store.steampowered.com/app/2274620/Discounty/">Get  press kit</a>
             </div>
             <div class="halfcolumn">
-                <iframe width="100%" id="game-galary" style="border-radius: 16px" src="https://www.youtube.com/embed/watch?v=TqI0iy6DIBI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe width="100%" id="game-galary" style="border-radius: 16px" <iframe width="560" height="315" src="https://www.youtube.com/embed/TqI0iy6DIBI?si=VT2QjC5wCBMl7YYb" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
             </div>
     </div>
