Updated meta data Updated background image to include new logo Updated press kit link

--- a/index.html
+++ b/index.html
@@ -6,7 +6,81 @@
     <meta name="description" content="Learn more about indie game developer Crinkle Cut Games and our debut game Discounty">
     <meta charset="utf-8">
     <link rel="stylesheet" href="stylesheet.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "VideoGame",
+      "name": "Discounty",
+      "alternateName": "Discounty Game",
+      "url": "https://www.crinklecutgames.com", 
+      "image": "https://www.crinklecutgames.com/assets/Discounty%20Key%20Art.webp",
+      "description": "Manage your own discount supermarket! Get caught up in small-town drama, organize and plan your shop's layout, and strike lucrative trade deals as you expand your secretive aunt's business empire. Selling more frozen fries will surely heal this broken community...right?\n\nStep into the quirky harbour town of Blomkest, where your aunt has entrusted you with managing its only supermarket. Design and organise your shop, manage stock levels, work the checkout, and strike trade deals. Build relationships with the charming locals, and grow your business empire while navigating community dynamics. Use every tool at your disposal to expand your business, but be mindful: rapid growth might ruffle a few feathers in this tight-knit community. Will you pursue endless profits, or find a way to benefit everyone in Blomkest?",
+      "gamePlatform": [
+        "Nintendo Switch",
+        "PlayStation 5",
+        "PlayStation 4",
+        "Xbox Series X",
+        "Xbox Series S",
+        "Steam",
+        "Epic Games Store",
+        "GOG.com"
+      ],
+      "operatingSystem": ["Windows"],
+      "applicationCategory": "Game",
+      "gameGenre": ["Simulation", "RPG", "Strategy", "Shopkeeping"],
+      "creator": {
+        "@type": "Organization",
+        "name": "Crinkle Cut Games"
+      },
+      "developer": {
+        "@type": "Organization",
+        "name": "Crinkle Cut Games"
+      },
+      "publisher": {
+        "@type": "Organization",
+        "name": "PQube"
+      },
+      "musicBy": {
+        "@type": "Person",
+        "name": "James Evans",
+        "url": "https://www.jamesmusic.co.uk/"
+      },
+      "trailer": {
+        "@type": "VideoObject",
+        "name": "Discounty - Official Trailer",
+        "embedUrl": "https://www.youtube.com/embed/67GAQh2NBno",
+        "thumbnailUrl": "https://www.crinklecutgames.com/assets/Discounty%20Key%20Art.webp",
+        "uploadDate": "2024-05-30"
+      },
+      "numberOfPlayers": {
+        "@type": "QuantitativeValue",
+        "minValue": 1,
+        "maxValue": 1
+      },
+      "playMode": "SinglePlayer",
+      "inLanguage": [
+        "fr", "de", "es", "pt-BR", "da", "it", "ja", "zh-Hans", "zh-Hant", "ko"
+      ],
+      "contentRating": [
+        "PEGI 3",
+        "USK 0",
+        "ESRB E"
+      ],
+      "genre": ["Simulation", "RPG", "Strategy", "Shopkeeping"],
+      "softwareRequirements": "Unity",
+      "keywords": "pixel art, supermarket, shopkeeping, indie game, cozy game",
+      "sameAs": [
+        "https://store.steampowered.com/app/2274620/Discounty/",
+        "https://www.youtube.com/@crinklecutgames",
+        "https://x.com/DiscountyGame",
+        "https://www.instagram.com/discountygame/",
+        "https://www.tiktok.com/@discountygame",
+        "https://bsky.app/profile/discountygame.bsky.social"
+      ]
+    }
+</script>
+
 </Head>
 <body>
 <div class="navigation">    
@@ -115,7 +189,7 @@
             <button type="button" class="contact-button"><a href="https://www.instagram.com/discountygame/"><img alt="Instagram logo" class="contact-button-image" src="assets/Instagram_Glyph_Black.webp" loading="lazy"></a></button>
             <button type="button" class="contact-button"><a href="https://x.com/DiscountyGame"><img alt="X.com logo" class="contact-button-image" src="assets/logo-black.webp" loading="lazy"></a></button>
             <p style="text-align: center; padding-bottom: 16px;">Or at <button style="background-color: transparent; border: 1px #e6904e; border-style: none none solid none; font-size: 16px; font-family: bloggersans; font-weight: bold; color: #45293f; text-decoration: none; text-align: center;" onmouseover="this.style.backgroundColor='#e6904e';" onmouseout="this.style.backgroundColor='transparent';" onclick="window.location.href='mailto:your-email@example.com'; :hover{border}">crinklecutgames@gmail.com</button></p>
-        <a href="https://drive.google.com/drive/folders/13MVsMPl3XRRqNUmauwhg3YvSd5s3XIhN">Press kit</a>
+        <a href="https://drive.google.com/drive/folders/1OWTJetVnMHyzHXhN0bX1pHsCidty5FFb?usp=sharing">Press kit</a>
     </div>
 </div> 
 </body>
