Added icon and updated to new trailer

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <Head>
+    <link rel="icon" type="image/jpeg" href="assets/DiscountyIcon200.jpg">
     <link rel="preload" as="image" href="assets/Discounty%20Key%20Art.webp">
     <title>Crinkle Cut Games</title>
     <meta name="description" content="Learn more about indie game developer Crinkle Cut Games and our debut game Discounty">
@@ -49,9 +50,9 @@
       "trailer": {
         "@type": "VideoObject",
         "name": "Discounty - Official Trailer",
-        "embedUrl": "https://www.youtube.com/embed/67GAQh2NBno",
+        "embedUrl": "https://www.youtube.com/watch?v=3Iui3JRitWQ",
         "thumbnailUrl": "https://www.crinklecutgames.com/assets/Discounty%20Key%20Art.webp",
-        "uploadDate": "2024-05-30"
+        "uploadDate": "2025-06-08"
       },
       "numberOfPlayers": {
         "@type": "QuantitativeValue",
@@ -112,7 +113,7 @@
                 <a href="https://store.steampowered.com/app/2274620/Discounty/">Get  press kit</a>
             </div>
             <div class="halfcolumn">
-                <iframe width="100%" id="game-galary" style="border-radius: 16px" <iframe width="560" height="315" src="https://www.youtube.com/embed/TqI0iy6DIBI?si=VT2QjC5wCBMl7YYb" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe width="100%" id="game-galary" style="border-radius: 16px" <iframe width="560" height="315" src="https://www.youtube.com/embed/3Iui3JRitWQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
             </div>
     </div>
