fixed press kit link

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <h2>Discounty 🛒</h2>
                 <p>Manage your own supermarket! Organize and restock shelves, check customers out, make local trade deals, and befriend a quirky cast of characters. Salvage a failing shop in the once-thriving town and grow it into a thriving business empire. But be warned: not everyone in town wants you to succeed.</p>
                 <a href="https://store.steampowered.com/app/2274620/Discounty/">Read more and add to your wishlist </a> <br> <br>
-                <a href="https://store.steampowered.com/app/2274620/Discounty/">Get  press kit</a>
+                <a href="https://drive.google.com/drive/folders/1OWTJetVnMHyzHXhN0bX1pHsCidty5FFb?usp=sharing">Get  press kit</a>
             </div>
             <div class="halfcolumn">
                 <iframe width="100%" id="game-galary" style="border-radius: 16px" <iframe width="560" height="315" src="https://www.youtube.com/embed/3Iui3JRitWQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
